--- a/EDA and Model Building.ipynb
+++ b/EDA and Model Building.ipynb
@@ -2146,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2156,6 +2156,19 @@
       "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 981.7186072343106, tolerance: 0.275260960376724\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=Lasso(),\n",
+       "             param_grid={'alpha': [1e-15, 1e-10, 1e-08, 0.001, 0.01, 1, 5, 10,\n",
+       "                                   20, 30, 35, 40, 45, 50, 55, 100]},\n",
+       "             scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2165,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2174,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2217,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2263,7 +2276,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2284,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2317,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2357,7 @@
        "KNeighborsRegressor()"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2355,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2364,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2373,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2406,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2437,7 @@
        "DecisionTreeRegressor(random_state=0)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2435,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2453,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2486,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2495,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2517,7 @@
        "SVR()"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2515,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2557,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2566,7 +2579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2597,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2604,7 +2617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2613,14 +2626,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Random Forest is: 89.71372655564487\n"
+      "Accuracy for Random Forest is: 89.7286012189291\n"
      ]
     }
    ],
@@ -2637,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2646,7 +2659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2655,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2664,7 +2677,7 @@
        "ExtraTreesRegressor()"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2684,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2693,14 +2706,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Extra Tree Regressor is: 91.11339751852888\n"
+      "Accuracy for Extra Tree Regressor is: 91.2538129932852\n"
      ]
     }
    ],
@@ -2717,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2726,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2735,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2757,7 @@
        "AdaBoostRegressor()"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2755,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2764,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2773,14 +2786,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Adaboost Regressor is: 10.26505999322781\n"
+      "Accuracy for Adaboost Regressor is: 15.710232033200022\n"
      ]
     }
    ],
@@ -2797,7 +2810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2806,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2815,7 +2828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2837,7 @@
        "GradientBoostingRegressor()"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2835,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2844,7 +2857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2853,14 +2866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Gradient Boost regressor is: 39.99138842302325\n"
+      "Accuracy for Gradient Boost regressor is: 39.99138842302323\n"
      ]
     }
    ],
@@ -2877,7 +2890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -2909,7 +2922,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4.3</td>\n",
-       "      <td>4.23</td>\n",
+       "      <td>4.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2968,7 +2981,7 @@
       ],
       "text/plain": [
        "      Actual  Predicted\n",
-       "0        4.3       4.23\n",
+       "0        4.3       4.28\n",
        "1        4.0       4.00\n",
        "2        3.9       3.90\n",
        "3        4.1       4.10\n",
@@ -2983,7 +2996,7 @@
        "[4646 rows x 2 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2995,7 +3008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3004,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3022,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3030,31 +3043,6 @@
     "pickle.dump(extratree_regressor,open('model.pkl','wb'))\n",
     "model = pickle.load(open('model.pkl','rb'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## lets try to copy the whole project and try to do the changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## or lets try to commit single single file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
